sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:19: error: Boolean does not take parameters
  } while (!isSorted())
                    ^